Finished test for cep rules